[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "neutron-tempest-plugin"
description = "Tempest plugin for Neutron Project"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Bug Tracker" = "https://bugs.launchpad.net/neutron"
"Documentation" = "https://docs.openstack.org/neutron-tempest-plugin"
"Source Code" = "https://opendev.org/openstack/neutron-tempest-plugin"

[tool.setuptools]
packages = [
    "neutron_tempest_plugin"
]

[project.entry-points."tempest.test_plugins"]
neutron_tests = "neutron_tempest_plugin.plugin:NeutronTempestPlugin"

[tool.mypy]
incremental = true
pretty = true
show_error_context = true
show_column_numbers = true
warn_unused_ignores = true
# remove gradually as progress is made
disable_error_code = "import-untyped,var-annotated,import-not-found,assignment,valid-type"
# honor excludes by not following there through imports
follow_imports = "silent"
files = "neutron_tempest_plugin"
exclude = "(?x)(neutron_tempest_plugin/scenario/test_dns_integration.py)"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "G", "S", "UP"]
ignore = [
    "S108",  # Probable insecure usage of temporary file or directory
    "S311",  # Suspicious non-cryptographic random usage
    "S603",  # Subprocess without shell equals true
    "S604",  # Subprocess call with truthy shell parameter
    "UP031", # Use format specifiers instead of percent format
    "UP032", # Use f-string instead of `format` call
]

[tool.ruff.lint.per-file-ignores]
"neutron_tempest_plugin/exceptions.py" = ["S101"]
"neutron_tempest_plugin/api/base.py" = ["E501"]
"neutron_tempest_plugin/common/shell.py" = ["S602"]
