[metadata]
name = neutron-tempest-plugin
summary = Tempest plugin for Neutron Project
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/neutron-tempest-plugin
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    neutron_tempest_plugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = neutron_tempest_plugin/locale
domain = neutron-tempest-plugin

[update_catalog]
domain = neutron-tempest-plugin
output_dir = neutron_tempest_plugin/locale
input_file = neutron_tempest_plugin/locale/neutron_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_tempest_plugin/locale/neutron_tempest_plugin.pot

[entry_points]
tempest.test_plugins =
    neutron_tests = neutron_tempest_plugin.plugin:NeutronTempestPlugin
