[metadata]
name = neutron-tempest-plugin
summary = Tempest plugin for Neutron Project
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/neutron-tempest-plugin
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    neutron_tempest_plugin

[entry_points]
tempest.test_plugins =
    neutron_tests = neutron_tempest_plugin.plugin:NeutronTempestPlugin
