[metadata]
name = neutron-tempest-plugin
summary = Tempest plugin for Neutron Project
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/neutron-tempest-plugin
python_requires = >=3.10
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only

[files]
packages =
    neutron_tempest_plugin

[entry_points]
tempest.test_plugins =
    neutron_tests = neutron_tempest_plugin.plugin:NeutronTempestPlugin
